--- a/src/TodoCounter.css
+++ b/src/TodoCounter.css
@@ -1,10 +1,11 @@
-.TodoCounter{
-  font-size:24px;
-  text-align:center;
-  margin:0;
-  padding:48px;
-  font-weight:400
+.TodoCounter {
+  font-size: 24px;
+  text-align: center;
+  margin: 0;
+  padding: 48px;
+  font-weight: normal;
 }
-.TodoCounter span{
-  font-weight:bold;
+
+.TodoCounter span {
+  font-weight: bold;
 }
